@@ -43,6 +43,10 @@
 	- check all header strings to resize buffer CVE-2006-5466 (#212833).
 	- plug some minor memory leaks.
 	- add php(...) extractors from PLD.
+	- add robustness to posix shared mutexes.
+	- discard stale locks when opening an rpmdb environment.
+	- popt: add POP_ARGFLAG_RANDOM using random(3) for a random value.
+	- add --{r,w}segfault options to randomly interrupt rpm execution.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
